added data visualization starter file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,12 @@
 project:
   type: website
   output-dir: docs
-
+  render:
+    - "*.qmd"
+    - "!*.Rmd"
+  resources:
+    - files/*.Rmd
+    
 website:
   title: "PPN"
   navbar:
